<resources>
    <string name="app_name">HireWireApplication</string>
    <string name="placeholder">Placeholder</string>
    <string name="hire_button_text">Hire</string>
    <string name="save_button_text">Save</string>
    <string name="service_id_input_text">Service Id:</string>
    <string name="service_title_input_text">Service Title:</string>
    <string name="service_description_input_text">Description:</string>
    <string name="service_price_input_text">Service Price:</string>
    <string name="price_format">$%1$d</string>
    <string name="email_input_text">Email:</string>
    <string name="password_input_text">Password:</string>
    <string name="sign_in_button">Sign In</string>
    <string name="user_profile_text">User Profile</string>
    <string name="name_input_text">Name:</string>
    <string name="bio_input_text">Bio:</string>
    <string name="edit_button_text">Edit</string>
    <string name="delete_service_text">Delete service</string>
    <string name="edit_service_text">Edit service</string>
    <string name="provider_name_format">By: %1$s</string>
    <string name="hire_toast_message">Hiring %1$s from %2$s</string>
    <string name="already_requested_toast">You already have a pending request for this service.</string>
    <string name="hire_request_success">Hire request sent successfully!</string>
    <string name="request_service_format">Service: %1$s</string>
    <string name="request_from_format">From: %1$s</string>
    <string name="accept_button_text">Accept</string>
    <string name="reject_button_text">Reject</string>
    <string name="no_name_text">No Name (Profile Not Created)</string>
    <string name="no_bio_text">No Bio (Profile Not Created)</string>
</resources>
