<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateServiceFragment">

    <ImageView
        android:id="@+id/currServiceImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="32dp"
        android:importantForAccessibility="no"
        android:scaleType="fitXY"
        android:src="@drawable/no_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/title_input_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/service_title_input_text"
        app:layout_constraintBottom_toBottomOf="@+id/title_input"
        app:layout_constraintStart_toStartOf="@+id/currServiceImage"
        app:layout_constraintTop_toTopOf="@+id/title_input" />

    <TextView
        android:id="@+id/description_input_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/service_description_input_text"
        app:layout_constraintBottom_toBottomOf="@+id/description_input"
        app:layout_constraintStart_toStartOf="@+id/title_input_text"
        app:layout_constraintTop_toTopOf="@+id/description_input" />

    <TextView
        android:id="@+id/price_input_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/service_price_input_text"
        app:layout_constraintBottom_toBottomOf="@+id/price_input"
        app:layout_constraintStart_toStartOf="@+id/description_input_text"
        app:layout_constraintTop_toTopOf="@+id/price_input" />

    <EditText
        android:id="@+id/title_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/description_input"
        app:layout_constraintTop_toBottomOf="@+id/currServiceImage"
        tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/description_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/price_input"
        app:layout_constraintTop_toBottomOf="@+id/title_input"
        tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/price_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/price_input_text"
        app:layout_constraintTop_toBottomOf="@+id/description_input"
        tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/save_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/uploadImageButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@android:color/transparent"
        android:importantForAccessibility="no"
        android:src="@android:drawable/ic_menu_camera"
        app:layout_constraintBottom_toBottomOf="@+id/currServiceImage"
        app:layout_constraintEnd_toEndOf="@+id/currServiceImage"
        app:layout_constraintStart_toStartOf="@+id/currServiceImage"
        app:layout_constraintTop_toTopOf="@+id/currServiceImage"
        tools:ignore="ImageContrastCheck,TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>