<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.profile_page.EditProfileFragment">


    <ImageView
        android:id="@+id/currProfileImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="64dp"
        android:importantForAccessibility="no"
        android:scaleType="fitXY"
        android:src="@drawable/default_profile_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/nameInputText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:text="@string/name_input_text"
        app:layout_constraintBottom_toBottomOf="@+id/nameInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/nameInput" />

    <TextView
        android:id="@+id/bioInputText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bio_input_text"
        app:layout_constraintBottom_toBottomOf="@+id/bioInput"
        app:layout_constraintStart_toStartOf="@+id/nameInputText"
        app:layout_constraintTop_toTopOf="@+id/bioInput" />

    <EditText
        android:id="@+id/nameInput"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintStart_toEndOf="@+id/nameInputText"
        app:layout_constraintTop_toBottomOf="@+id/currProfileImage"
        tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/bioInput"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/nameInput"
        app:layout_constraintTop_toBottomOf="@+id/nameInput"
        tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/saveChangesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/save_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/uploadProfileImageButton"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@android:color/transparent"
        android:importantForAccessibility="no"
        android:src="@android:drawable/ic_menu_camera"
        app:layout_constraintBottom_toBottomOf="@+id/currProfileImage"
        app:layout_constraintEnd_toEndOf="@+id/currProfileImage"
        app:layout_constraintStart_toStartOf="@+id/currProfileImage"
        app:layout_constraintTop_toTopOf="@+id/currProfileImage"
        tools:ignore="ImageContrastCheck,TouchTargetSizeCheck" />

    <ProgressBar
        android:id="@+id/queryProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>